# fetch-doc

./: LICENSE  README.md  encoded-credentials.txt  fetch-doc.yaml  pyproject.toml  tmp.py
.github/workflows/: main.yml
fetch_doc/: credentials.json  lambda_function.py  sr.json
